# Multi-Agent-RAG_System-Astronomy

./: .gitattributes  .gitignore  README.md  ingest.py  orchestrate.py  pyproject.toml  qa.py  requirements.txt  retrieval.py  route.py
src/rag_system/: __init__.py
src/rag_system/apis/: __init__.py  apod.py  neo_feed.py  neo_lookup.py  neo_routing.py
src/rag_system/ingest/: __init__.py  __main__.py  chunking.py  cli.py  loaders.py  models.py  store.py  utils.py
src/rag_system/orchestration/: __init__.py  cli.py  runner.py
src/rag_system/qa/: __init__.py  answerer.py  cli.py  verifier.py
src/rag_system/retrieval/: __init__.py  bm25.py  bm25_cache.py  cli.py  embedding.py  retriever.py  search.py
src/rag_system/routing/: __init__.py  __main__.py  cli.py  dispatch.py  intents.py  router.py  specs.py
testing/: local_model_test.py  test_api_key.py
testing/test_data/: NEO_API_Endpoints_Test_Queries.txt  Sample_Test_Queries.txt  golden_dataset.xlsx
ui/: streamlit_app.py
