# Purpose: packaging/metadata + declares dependencies and src-layout package discovery.
# Important detail: package-dir = {"" = "src"} tells setuptools that Python packages live under src/, not repo root.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-rag-system"
version = "0.1.0"
description = "Production-grade multi-agent RAG system (step-by-step)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf==6.6.0",
  "beautifulsoup4==4.14.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

